# calorie_counting_bot

./: .env_example  README.md  pyproject.toml  start_tg_bot.py
manage/: check_open_ai.py  demojize.py
src/: main.py
src/blank/: public.py
src/business_service/: calculate_total_line.py  define_ingredients_by_photo.py  define_ingredients_by_text.py  generate_image.py
src/core/: const.py  on_error.py  settings.py  util.py
src/filter/: filter_.py
src/kb/: inline.py
src/router/: raw_message.py  router.py  uploaded_photo.py
