[project]
name = "calorie-counting-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "njmin",email = "gazinurnurtdinov35@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "arpakitlib (>=1.7.129,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
